// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Force status button component Icon for force status button component Renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    size={24}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": <Unknown
        fillColor="#FFF"
        height={6}
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "function",
      "props": Object {
        "fillColor": "#FFF",
        "height": 6,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          fillColor="#FFF"
          height={6}
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "fillColor": "#FFF",
          "height": 6,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Force status button component Renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    disabled={true}
    modelPath=".model"
    size={24}
    status="DELIVER"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Unknown
          disabled={true}
          icon={
            <Unknown
              size={24}
            />
          }
          size={24}
          status="DELIVER"
        />,
        <Unknown
          component={[Function]}
          id=".model-DELIVER"
          model=".model"
          value="DELIVER"
        />,
      ],
      "disabled": true,
      "htmlFor": ".model-DELIVER",
      "status": "DELIVER",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "disabled": true,
          "icon": <Unknown
            size={24}
          />,
          "size": 24,
          "status": "DELIVER",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "component": [Function],
          "id": ".model-DELIVER",
          "model": ".model",
          "value": "DELIVER",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Unknown
            disabled={true}
            icon={
              <Unknown
                size={24}
              />
            }
            size={24}
            status="DELIVER"
          />,
          <Unknown
            component={[Function]}
            id=".model-DELIVER"
            model=".model"
            value="DELIVER"
          />,
        ],
        "disabled": true,
        "htmlFor": ".model-DELIVER",
        "status": "DELIVER",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "disabled": true,
            "icon": <Unknown
              size={24}
            />,
            "size": 24,
            "status": "DELIVER",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "component": [Function],
            "id": ".model-DELIVER",
            "model": ".model",
            "value": "DELIVER",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Force status button component Renders with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    status="DELIVER"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Unknown
          disabled={false}
          icon={
            <Unknown
              size={36}
            />
          }
          size={36}
          status="DELIVER"
        />,
        <Unknown
          component={[Function]}
          id=".status-DELIVER"
          model=".status"
          value="DELIVER"
        />,
      ],
      "disabled": false,
      "htmlFor": ".status-DELIVER",
      "status": "DELIVER",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "disabled": false,
          "icon": <Unknown
            size={36}
          />,
          "size": 36,
          "status": "DELIVER",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "function",
        "props": Object {
          "component": [Function],
          "id": ".status-DELIVER",
          "model": ".status",
          "value": "DELIVER",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Unknown
            disabled={false}
            icon={
              <Unknown
                size={36}
              />
            }
            size={36}
            status="DELIVER"
          />,
          <Unknown
            component={[Function]}
            id=".status-DELIVER"
            model=".status"
            value="DELIVER"
          />,
        ],
        "disabled": false,
        "htmlFor": ".status-DELIVER",
        "status": "DELIVER",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "disabled": false,
            "icon": <Unknown
              size={36}
            />,
            "size": 36,
            "status": "DELIVER",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "function",
          "props": Object {
            "component": [Function],
            "id": ".status-DELIVER",
            "model": ".status",
            "value": "DELIVER",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
